fix 1px whitline on ios landscape after "close about" click

--- a/css/index.css
+++ b/css/index.css
@@ -74,7 +74,7 @@ h1 a:visited {
 #about {
     position: fixed;
     top: 0px;
-    left: 100vw;
+    left: 101vw;
     width: 100vw;
     height: 100vh;
 
